test/integration/bad/tuples/bad_unpack5.stan
transformed data {
  int x = 3;
  int y = 4;

  (x, x) = (x, y);
}
